# MoFA

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md
Input_File_Generator/: CMakeLists.txt
Input_File_Generator/include/: generate_input_file.h  generate_input_file_TOOLS.h  generate_input_file_TUTORIAL.h  generate_input_file_UNITTESTS.h
Input_File_Generator/src/: generate_input_file.cpp
Mesh_Tools/: CMakeLists.txt
Mesh_Tools/include/: gmsh_import_STL.h  gmsh_utils.h
Mesh_Tools/src/: generate_mesh.cpp  gmsh_import_STL.cpp  gmsh_utils.cpp  juxtapose_unitcell.cpp  scale_mesh.cpp
Mesh_Tools/src_py/: SVG_to_gmsh.py  SVG_to_gmsh2.py
Post_Processing/Error_Calc/: CMakeLists.txt
Post_Processing/Error_Calc/src/: Error_Calc.cpp
Post_Processing/GIF_Maker/src_py/: GIF_Maker.py
Post_Processing/Porescale_Avger/: CMakeLists.txt
Post_Processing/Porescale_Avger/src/: Porescale_Avger.cpp
Projects/: README.md
Projects/Example_Project/data/: Tutorial_Geometry.txt
Projects/Example_Project/scripts/: UNIT_TESTS.sh  config.sh  full_make_run_scalar_closure_solver.sh  make_and_run_error_calc.sh  make_and_run_input_file_generator.sh  make_and_run_mesh_generator.sh  make_and_run_porescale_solver.sh  make_and_run_scalar_closure_solver.sh  make_and_run_stokes_solver.sh  make_and_run_stokes_solver_p.sh  make_and_run_transport_solver_p.sh  make_and_run_upscaled_model.sh  transport_closure_solver_ensemble.sh  transport_closure_solver_ensemble_p.sh
Projects/Example_Project/scripts/subscripts/: make_executable.sh  run_executable.sh
Solvers/Stokes_Solver/: CMakeLists.txt  CMakeLists_OLD.txt
Solvers/Stokes_Solver/src/: Stokes_Solver.cpp  Stokes_Solver_p.cpp
Solvers/Transport_Closure_Solver/: CMakeLists.txt
Solvers/Transport_Closure_Solver/src/: Transport_Closure_Solver.cpp  Transport_Closure_Solver_Ensemble.cpp
Solvers/Transport_Solver/: CMakeLists.txt
Solvers/Transport_Solver/src/: Transport_Solver.cpp  Transport_Solver_p.cpp
Solvers/Upscaled_Solver_Scalar/: CMakeLists.txt
Solvers/Upscaled_Solver_Scalar/src/: Upscaled_Solver_Scalar.cpp  Upscaled_Solver_Scalar_OLD.cpp
Utility/include/: JSON_IO.h  mfem_util.h
Utility/src/: JSON_IO.cpp  mfem_util.cpp
cmake/: Configuration_Paths.cmake  run_cmake.sh  run_cmake_p.sh
scripts/: bash_utility_functions.sh
